--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "framer-motion": "^10.12.10",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
